--- a/app/globals.css
+++ b/app/globals.css
@@ -61,13 +61,18 @@
     @apply bg-background text-foreground;
   }
   h1 {
-    @apply text-xl font-bold;
+    @apply text-2xl font-bold;
+    
   }
   h2 {
     @apply text-lg font-bold;
   }
   p {
     @apply text-base;
+  }
+  .border-dash-space-x {
+    border: dashed 60px #000;
+    border-width: 4px;
   }
 
 } 
