--- a/app/globals.css
+++ b/app/globals.css
@@ -57,8 +57,11 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
   h1 {
     @apply text-2xl font-bold;
